<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/NavU"
        android:src="@drawable/navu"
        android:layout_marginLeft="-30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_schedule"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/text_edit_room"
        android:hint=" ⌕ Search (Room#, Building)"
        android:gravity="center"
        android:background="@color/grey"
        android:textSize="18sp"
        android:elegantTextHeight="false"
        android:layout_height="48dp"
        android:layout_width="245dp"
        android:layout_marginTop="-250dp"
        android:layout_below="@+id/image_raven"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/image_raven"
        android:src="@drawable/raven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_schedule"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp" />

    <Button
        android:id="@+id/button_search"
        android:text="@string/button_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_edit_room"
        android:layout_alignLeft="@+id/button_about"
        android:layout_alignStart="@+id/button_about" />


</RelativeLayout>

